// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly renders with today button 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DatePickerV1
    today={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <DatePicker
          calendarIcon={
                    <svg
                              height="19"
                              viewBox="0 0 19 19"
                              width="19"
                              xmlns="http://www.w3.org/2000/svg"
                    >
                              <g
                                        stroke="black"
                                        strokeWidth="2"
                              >
                                        <rect
                                                  fill="none"
                                                  height="15"
                                                  width="15"
                                                  x="2"
                                                  y="2"
                                        />
                                        <line
                                                  x1="6"
                                                  x2="6"
                                                  y1="0"
                                                  y2="4"
                                        />
                                        <line
                                                  x1="13"
                                                  x2="13"
                                                  y1="0"
                                                  y2="4"
                                        />
                              </g>
                    </svg>
          }
          clearIcon={
                    <svg
                              height="19"
                              viewBox="0 0 19 19"
                              width="19"
                              xmlns="http://www.w3.org/2000/svg"
                    >
                              <g
                                        stroke="black"
                                        strokeWidth="2"
                              >
                                        <line
                                                  x1="4"
                                                  x2="15"
                                                  y1="4"
                                                  y2="15"
                                        />
                                        <line
                                                  x1="15"
                                                  x2="4"
                                                  y1="4"
                                                  y2="15"
                                        />
                              </g>
                    </svg>
          }
          isOpen={null}
          maxDate={undefined}
          maxDetail={undefined}
          minDate={undefined}
          onChange={[Function]}
          returnValue="start"
          value={undefined}
/>,
        <SimpleButton
          dataAttr="prev"
          disabled={false}
          onClick={[Function]}
          text="prev"
/>,
        <SimpleButton
          dataAttr="next"
          disabled={false}
          onClick={[Function]}
          text="next"
/>,
        <SimpleButton
          dataAttr="today"
          disabled={false}
          onClick={[Function]}
          text="today"
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "calendarIcon": <svg
            height="19"
            viewBox="0 0 19 19"
            width="19"
            xmlns="http://www.w3.org/2000/svg"
>
            <g
                        stroke="black"
                        strokeWidth="2"
            >
                        <rect
                                    fill="none"
                                    height="15"
                                    width="15"
                                    x="2"
                                    y="2"
                        />
                        <line
                                    x1="6"
                                    x2="6"
                                    y1="0"
                                    y2="4"
                        />
                        <line
                                    x1="13"
                                    x2="13"
                                    y1="0"
                                    y2="4"
                        />
            </g>
</svg>,
          "clearIcon": <svg
            height="19"
            viewBox="0 0 19 19"
            width="19"
            xmlns="http://www.w3.org/2000/svg"
>
            <g
                        stroke="black"
                        strokeWidth="2"
            >
                        <line
                                    x1="4"
                                    x2="15"
                                    y1="4"
                                    y2="15"
                        />
                        <line
                                    x1="15"
                                    x2="4"
                                    y1="4"
                                    y2="15"
                        />
            </g>
</svg>,
          "isOpen": null,
          "maxDate": undefined,
          "maxDetail": undefined,
          "minDate": undefined,
          "onChange": [Function],
          "returnValue": "start",
          "value": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "dataAttr": "prev",
          "disabled": false,
          "onClick": [Function],
          "text": "prev",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "dataAttr": "next",
          "disabled": false,
          "onClick": [Function],
          "text": "next",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "dataAttr": "today",
          "disabled": false,
          "onClick": [Function],
          "text": "today",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <DatePicker
            calendarIcon={
                        <svg
                                    height="19"
                                    viewBox="0 0 19 19"
                                    width="19"
                                    xmlns="http://www.w3.org/2000/svg"
                        >
                                    <g
                                                stroke="black"
                                                strokeWidth="2"
                                    >
                                                <rect
                                                            fill="none"
                                                            height="15"
                                                            width="15"
                                                            x="2"
                                                            y="2"
                                                />
                                                <line
                                                            x1="6"
                                                            x2="6"
                                                            y1="0"
                                                            y2="4"
                                                />
                                                <line
                                                            x1="13"
                                                            x2="13"
                                                            y1="0"
                                                            y2="4"
                                                />
                                    </g>
                        </svg>
            }
            clearIcon={
                        <svg
                                    height="19"
                                    viewBox="0 0 19 19"
                                    width="19"
                                    xmlns="http://www.w3.org/2000/svg"
                        >
                                    <g
                                                stroke="black"
                                                strokeWidth="2"
                                    >
                                                <line
                                                            x1="4"
                                                            x2="15"
                                                            y1="4"
                                                            y2="15"
                                                />
                                                <line
                                                            x1="15"
                                                            x2="4"
                                                            y1="4"
                                                            y2="15"
                                                />
                                    </g>
                        </svg>
            }
            isOpen={null}
            maxDate={undefined}
            maxDetail={undefined}
            minDate={undefined}
            onChange={[Function]}
            returnValue="start"
            value={undefined}
/>,
          <SimpleButton
            dataAttr="prev"
            disabled={false}
            onClick={[Function]}
            text="prev"
/>,
          <SimpleButton
            dataAttr="next"
            disabled={false}
            onClick={[Function]}
            text="next"
/>,
          <SimpleButton
            dataAttr="today"
            disabled={false}
            onClick={[Function]}
            text="today"
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "calendarIcon": <svg
              height="19"
              viewBox="0 0 19 19"
              width="19"
              xmlns="http://www.w3.org/2000/svg"
>
              <g
                            stroke="black"
                            strokeWidth="2"
              >
                            <rect
                                          fill="none"
                                          height="15"
                                          width="15"
                                          x="2"
                                          y="2"
                            />
                            <line
                                          x1="6"
                                          x2="6"
                                          y1="0"
                                          y2="4"
                            />
                            <line
                                          x1="13"
                                          x2="13"
                                          y1="0"
                                          y2="4"
                            />
              </g>
</svg>,
            "clearIcon": <svg
              height="19"
              viewBox="0 0 19 19"
              width="19"
              xmlns="http://www.w3.org/2000/svg"
>
              <g
                            stroke="black"
                            strokeWidth="2"
              >
                            <line
                                          x1="4"
                                          x2="15"
                                          y1="4"
                                          y2="15"
                            />
                            <line
                                          x1="15"
                                          x2="4"
                                          y1="4"
                                          y2="15"
                            />
              </g>
</svg>,
            "isOpen": null,
            "maxDate": undefined,
            "maxDetail": undefined,
            "minDate": undefined,
            "onChange": [Function],
            "returnValue": "start",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "dataAttr": "prev",
            "disabled": false,
            "onClick": [Function],
            "text": "prev",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "dataAttr": "next",
            "disabled": false,
            "onClick": [Function],
            "text": "next",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "dataAttr": "today",
            "disabled": false,
            "onClick": [Function],
            "text": "today",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders correctly renders without today button 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DatePickerV1 />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <DatePicker
          calendarIcon={
                    <svg
                              height="19"
                              viewBox="0 0 19 19"
                              width="19"
                              xmlns="http://www.w3.org/2000/svg"
                    >
                              <g
                                        stroke="black"
                                        strokeWidth="2"
                              >
                                        <rect
                                                  fill="none"
                                                  height="15"
                                                  width="15"
                                                  x="2"
                                                  y="2"
                                        />
                                        <line
                                                  x1="6"
                                                  x2="6"
                                                  y1="0"
                                                  y2="4"
                                        />
                                        <line
                                                  x1="13"
                                                  x2="13"
                                                  y1="0"
                                                  y2="4"
                                        />
                              </g>
                    </svg>
          }
          clearIcon={
                    <svg
                              height="19"
                              viewBox="0 0 19 19"
                              width="19"
                              xmlns="http://www.w3.org/2000/svg"
                    >
                              <g
                                        stroke="black"
                                        strokeWidth="2"
                              >
                                        <line
                                                  x1="4"
                                                  x2="15"
                                                  y1="4"
                                                  y2="15"
                                        />
                                        <line
                                                  x1="15"
                                                  x2="4"
                                                  y1="4"
                                                  y2="15"
                                        />
                              </g>
                    </svg>
          }
          isOpen={null}
          maxDate={undefined}
          maxDetail={undefined}
          minDate={undefined}
          onChange={[Function]}
          returnValue="start"
          value={undefined}
/>,
        <SimpleButton
          dataAttr="prev"
          disabled={false}
          onClick={[Function]}
          text="prev"
/>,
        <SimpleButton
          dataAttr="next"
          disabled={false}
          onClick={[Function]}
          text="next"
/>,
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "calendarIcon": <svg
            height="19"
            viewBox="0 0 19 19"
            width="19"
            xmlns="http://www.w3.org/2000/svg"
>
            <g
                        stroke="black"
                        strokeWidth="2"
            >
                        <rect
                                    fill="none"
                                    height="15"
                                    width="15"
                                    x="2"
                                    y="2"
                        />
                        <line
                                    x1="6"
                                    x2="6"
                                    y1="0"
                                    y2="4"
                        />
                        <line
                                    x1="13"
                                    x2="13"
                                    y1="0"
                                    y2="4"
                        />
            </g>
</svg>,
          "clearIcon": <svg
            height="19"
            viewBox="0 0 19 19"
            width="19"
            xmlns="http://www.w3.org/2000/svg"
>
            <g
                        stroke="black"
                        strokeWidth="2"
            >
                        <line
                                    x1="4"
                                    x2="15"
                                    y1="4"
                                    y2="15"
                        />
                        <line
                                    x1="15"
                                    x2="4"
                                    y1="4"
                                    y2="15"
                        />
            </g>
</svg>,
          "isOpen": null,
          "maxDate": undefined,
          "maxDetail": undefined,
          "minDate": undefined,
          "onChange": [Function],
          "returnValue": "start",
          "value": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "dataAttr": "prev",
          "disabled": false,
          "onClick": [Function],
          "text": "prev",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "dataAttr": "next",
          "disabled": false,
          "onClick": [Function],
          "text": "next",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <DatePicker
            calendarIcon={
                        <svg
                                    height="19"
                                    viewBox="0 0 19 19"
                                    width="19"
                                    xmlns="http://www.w3.org/2000/svg"
                        >
                                    <g
                                                stroke="black"
                                                strokeWidth="2"
                                    >
                                                <rect
                                                            fill="none"
                                                            height="15"
                                                            width="15"
                                                            x="2"
                                                            y="2"
                                                />
                                                <line
                                                            x1="6"
                                                            x2="6"
                                                            y1="0"
                                                            y2="4"
                                                />
                                                <line
                                                            x1="13"
                                                            x2="13"
                                                            y1="0"
                                                            y2="4"
                                                />
                                    </g>
                        </svg>
            }
            clearIcon={
                        <svg
                                    height="19"
                                    viewBox="0 0 19 19"
                                    width="19"
                                    xmlns="http://www.w3.org/2000/svg"
                        >
                                    <g
                                                stroke="black"
                                                strokeWidth="2"
                                    >
                                                <line
                                                            x1="4"
                                                            x2="15"
                                                            y1="4"
                                                            y2="15"
                                                />
                                                <line
                                                            x1="15"
                                                            x2="4"
                                                            y1="4"
                                                            y2="15"
                                                />
                                    </g>
                        </svg>
            }
            isOpen={null}
            maxDate={undefined}
            maxDetail={undefined}
            minDate={undefined}
            onChange={[Function]}
            returnValue="start"
            value={undefined}
/>,
          <SimpleButton
            dataAttr="prev"
            disabled={false}
            onClick={[Function]}
            text="prev"
/>,
          <SimpleButton
            dataAttr="next"
            disabled={false}
            onClick={[Function]}
            text="next"
/>,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "calendarIcon": <svg
              height="19"
              viewBox="0 0 19 19"
              width="19"
              xmlns="http://www.w3.org/2000/svg"
>
              <g
                            stroke="black"
                            strokeWidth="2"
              >
                            <rect
                                          fill="none"
                                          height="15"
                                          width="15"
                                          x="2"
                                          y="2"
                            />
                            <line
                                          x1="6"
                                          x2="6"
                                          y1="0"
                                          y2="4"
                            />
                            <line
                                          x1="13"
                                          x2="13"
                                          y1="0"
                                          y2="4"
                            />
              </g>
</svg>,
            "clearIcon": <svg
              height="19"
              viewBox="0 0 19 19"
              width="19"
              xmlns="http://www.w3.org/2000/svg"
>
              <g
                            stroke="black"
                            strokeWidth="2"
              >
                            <line
                                          x1="4"
                                          x2="15"
                                          y1="4"
                                          y2="15"
                            />
                            <line
                                          x1="15"
                                          x2="4"
                                          y1="4"
                                          y2="15"
                            />
              </g>
</svg>,
            "isOpen": null,
            "maxDate": undefined,
            "maxDetail": undefined,
            "minDate": undefined,
            "onChange": [Function],
            "returnValue": "start",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "dataAttr": "prev",
            "disabled": false,
            "onClick": [Function],
            "text": "prev",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "dataAttr": "next",
            "disabled": false,
            "onClick": [Function],
            "text": "next",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
